# object-detection

./: .gitignore  CMakeLists.txt  main  main.cpp  output.txt  run.sh
